--- a/samples/jandcode-samples-nodejssimple1/frontend/package.json
+++ b/samples/jandcode-samples-nodejssimple1/frontend/package.json
@@ -11,6 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.21.1"
+    "axios": "^0.21.1",
+    "cross-env": "^7.0.3",
+    "webpack": "^5.57.1",
+    "webpack-cli": "^4.9.0"
   }
 }
